feat: adjust order and order_event
