# docs/swagger.yaml
@@ -1,5 +1,27 @@
 basePath: /
 definitions:
+  dto.CreateOrderResponse:
+    properties:
+      created_at:
+        example: "2026-05-01T00:00:00Z"
+        type: string
+      id:
+        example: 1
+        type: integer
+      shipping_address:
+        example: 123 Nguyen Hue
+        type: string
+      status:
+        allOf:
+        - $ref: '#/definitions/models.OrderStatus'
+        example: created
+      total_amount:
+        example: 250000
+        type: integer
+      updated_at:
+        example: "2026-05-01T00:00:00Z"
+        type: string
+    type: object
   dto.DailyReportResponse:
     properties:
       avg_deliver_time:
@@ -49,6 +71,9 @@ definitions:
     type: object
   dto.ImportOrderEventRequest:
     properties:
+      driver_id:
+        example: 1
+        type: integer
       event_at:
         example: "2026-05-17T09:00:00Z"
         type: string
@@ -59,7 +84,7 @@ definitions:
         example: packed
         type: string
       updated_by:
-        example: warehouse_staff_01
+        example: driver_01
         type: string
     type: object
   dto.ImportOrderEventsResponse:
@@ -81,10 +106,10 @@ definitions:
   dto.LoginRequest:
     properties:
       email:
-        example: admin@demo.com
+        example: admin@order.com
         type: string
       password:
-        example: Admin@123
+        example: "12345"
         type: string
     required:
     - email
@@ -95,13 +120,10 @@ definitions:
       access_token:
         type: string
       expires_in:
-        description: seconds, e.g. 86400
         type: integer
       role:
-        description: '"admin" or "driver"'
         type: string
       token_type:
-        description: '"Bearer"'
         type: string
     type: object
   dto.OrderReponse:
@@ -113,7 +135,7 @@ definitions:
         example: "2026-05-01T00:00:00Z"
         type: string
       shipping_address:
-        example: Viet Nam
+        example: 123 Nguyen Hue
         type: string
       status:
         allOf:
@@ -123,10 +145,10 @@ definitions:
         example: 100000
         type: integer
       user_phone:
-        example: "0123456789"
+        example: "0977605602"
         type: string
       username:
-        example: Supper Man
+        example: Nguyen Tien Khoa
         type: string
     type: object
   dto.OrderRequest:
@@ -176,6 +198,17 @@ definitions:
     - ORDER_STATUS_DELIVERED
     - ORDER_STATUS_CANCELLED
     - ORDER_STATUS_REFUNDED
+  response.CreateOrderSuccessResponse:
+    properties:
+      data:
+        $ref: '#/definitions/dto.CreateOrderResponse'
+      message:
+        example: Success
+        type: string
+      status:
+        example: 201
+        type: integer
+    type: object
   response.ErrorBadReqResponse:
     properties:
       data: {}
@@ -423,7 +456,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/response.ResponseStruct'
+            $ref: '#/definitions/response.CreateOrderSuccessResponse'
         "400":
           description: Bad Request
           schema:
