# internal/models/order.go
@@ -36,7 +36,6 @@ type Order struct {
 	UserInfo      datatypes.JSON `gorm:"column:user_info;type:jsonb" json:"user_info"`
 	TotalAmount   int64          `gorm:"column:total_amount;type:bigint;not null" json:"total_amount"`
 	CurrentStatus OrderStatus    `gorm:"column:current_status;type:varchar(20);not null;default:'created';comment:Concurrency Lock" json:"current_status"`
-	DriverID      *int64         `gorm:"column:driver_id" json:"driver_id"`
 	CreatedAt     time.Time      `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
 	UpdatedAt     time.Time      `gorm:"column:updated_at;not null;default:CURRENT_TIMESTAMP" json:"updated_at"`
 }
